manifests/vso-setup.yaml
# vso-setup.yaml
#
# Creates the databases namespace and configures the Vault Secrets Operator
# (VSO) to authenticate with the in-cluster Vault. This file establishes the
# connection to Vault; workloads and the secrets they consume are defined in
# their respective manifests.

apiVersion: v1
kind: Namespace
metadata:
  name: databases
